  * [Paddington] preserve release date hh:mm in "Edit Releases"
  * [Roland] Added eval magic in install-ldap.sh to help debugging.
    "export DEBSFDEBUG=1" will disable all the redirections, thus showing
    the STDOUT and STDERR of all commands.
  * [Roland] Added extra columns (use_ftp, use_tracker, use_frs,
    use_stats, enable_pserver, enable_anoncvs) in the groups table.
  * [Christian] added web management of these new columns, now you can hide
    almost everything in project page 
  * [Roland] sourceforge-ldap-openldap now depends on libnss-ldap.  This
    should not be necessary and will have to be fixed at some point, but
    for now I'm just too lazy to move the code from install-ldap.sh to
    another, more appropriately named, script.
  * [Roland] Applied patch #614 from Robert Lamoureux
    <Robert.Lamoureux@tfn.com> fixing various problems with themes.
    Thanks, Bob!
  * [Roland] Included full Spanish translation from Vicente Ruiz.  Thanks
    a lot, Vicente!

 -- Roland Mas <lolando@debian.org>  Mon, 28 Oct 2002 19:31:18 +0100

sourceforge (2.6-0+13) experimental; urgency=low

  * [Christian] Added a dump and restore option to install-db.sh
  * [Christian] Added themeable main page support
  * [Christian] Rewritting of trove_getcatlisting function to
    return a string instead of direct printing
  * [Christian] you can choose default language in local.inc with
    e.g. $sys_lang='French';
  * [Roland] Added the files necessary for sourceforge-mta-postfix.  Yay!
    Our first try at flexibility!  Don't get any funny ideas though, I'm
    pretty confident it doesn't work.  Yet.
  * [Roland] [From 2.5] Changed the way we empty the LDAP directory, so as
    not to kill entries that are not ours.
  * [Roland] [From 2.5] Fixed last inserted languages.
  * [Soon-Son] added group write permission (0664) when creating the
    val-tags file in the CVSROOT directory of each project. Old